--- a/gb/20/5/16/n12114457.md
+++ b/gb/20/5/16/n12114457.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/carc2844/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/carc2844/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/carc2844/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/carc2844/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/carc2844/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/carc2844/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>质询气氛火爆 余筱菁议员关切教育问题</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/7e5747e9f6d169a59b69b89e20b8f5c7-600x400.jpg" />
 <h6>新竹县议会召开第19届第3次定期会，竹县议员余筱菁进行县政总质询。（新竹县政府提供）
 </h6>
 <hr>
-<p>【大纪元2020年05月16日讯】（大纪元记者赖月贵台湾新竹报导）新竹县议会召开第19届第3次定期会，竹县议员<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E4%BD%99%E7%AD%B1%E8%8F%81.md#1">余筱菁</a>进行县政总质询，火力全开，问得县府各局处主管哑口无言，虽然议会气氛不佳，但不难看出余筱菁的用心程度，从教育学区问题、环保垃圾焚化炉到交通路平等，都准备了不少收集到的资料。</p>
-<p><ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E4%BD%99%E7%AD%B1%E8%8F%81.md#1">余筱菁</a>首先提到，依照国民教育法施行细则，“国中小之设置，以不超过四十八班为原则”竹北东区就有6所小学超过48班，国中就是东兴与成功国中两所，因此她强烈建议再加盖增设学校，以解决学生人数爆增问题。</p>
+<p>【大纪元2020年05月16日讯】（大纪元记者赖月贵台湾新竹报导）新竹县议会召开第19届第3次定期会，竹县议员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BD%99%E7%AD%B1%E8%8F%81.md#1">余筱菁</a>进行县政总质询，火力全开，问得县府各局处主管哑口无言，虽然议会气氛不佳，但不难看出余筱菁的用心程度，从教育学区问题、环保垃圾焚化炉到交通路平等，都准备了不少收集到的资料。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BD%99%E7%AD%B1%E8%8F%81.md#1">余筱菁</a>首先提到，依照国民教育法施行细则，“国中小之设置，以不超过四十八班为原则”竹北东区就有6所小学超过48班，国中就是东兴与成功国中两所，因此她强烈建议再加盖增设学校，以解决学生人数爆增问题。</p>
 <p>余筱菁也询问教育处长杨郡慈，日前曾提到“将修改新竹县总量管制入学实施要点，让总量管制学校不再收取第四顺位学生，就可以改善越区就读的现象”。她请问处长，有些经济弱势、无法拥有自购房屋的民众，就不能就读了吗？</p>
-<figure id="attachment_12114483" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/05/440276.jpg"><img class=" wp-image-12114483" src="https://i.epochtimes.com/assets/uploads/2020/05/440276-600x400.jpg" alt="" width="500" b="333" /></a><figcaption class="wp-caption-text">针对教育处拟实施竹北学区学生总量管制问题，新竹县议员余筱菁与学生家长、绿党竹北市民代表陈冠宇等人，在县政府大门前召开记者会表达诉求。 （余筱菁提供）</figcaption></figure>
+<figure id="attachment_12114483" aria-describedby="caption-attachment-12114483" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/05/440276.jpg"><img class="wp-image-12114483" src="https://i.epochtimes.com/assets/uploads/2020/05/440276-600x400.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-12114483" class="wp-caption-text">针对教育处拟实施竹北学区学生总量管制问题，新竹县议员余筱菁与学生家长、绿党竹北市民代表陈冠宇等人，在县政府大门前召开记者会表达诉求。（余筱菁提供）</figcaption></figure>
 <p>杨郡慈回应，只有新竹县有第四顺位，其他县市都只有第一、二、三顺位，为了总量管制，只好考虑取消第四顺位，这是为了解决入学问题的整体考量，也许过程中会伤害到某些人的权益，但绝对没有打压经济弱势的想法。</p>
 <p>杨郡慈进一步解释，所谓的“第四顺位”就是不符合第二顺位的人，第二顺位是指拥有自有房屋权状或公证的租赁契约，这是教育处初拟修法方向，也是将来学校要审查的文件，她并没有断言第四顺位是寄户生，而只是拿不出购屋或租屋证明的人，因为是依法行政，必须有执行的依据，租屋者可以和房东商量，拿租赁契约到法院公证，也是符合规定的。</p>
 <p>余筱菁也关切环保局兴建垃圾焚化炉的问题，一人投标一人得标，这是公共建设该有的行政程序吗？买东西都知道货比三家不吃亏，以BOO的做法执行公共建设问题多，其适用促参程序也有“先射箭、再画靶”的疑虑，请县府三思。</p>
@@ -21,48 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/5/25/n11279323.md#1">余筱菁议员质询 争取设置特教儿童日照中心</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/7/21/n11398095.md#1">反迫害20年 台政要：感谢法轮功守住普世价值</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/7/28/n11414950.md#1">法轮功反迫害20年 亚洲各界赞勇者风范</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/11/13/n11652977.md#1">余筱菁议员质询 关切大型OT案工程赔偿问题</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/11/14/n11655764.md#1">绿党提不分区 女医师邓惠文列第一</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/19/11/19/n11665984.md#1">绿党今登记参选竹县立委 喊出“抗中保台”</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114076.md#1">为防疫能力打分数 竹县议员呼吁需再加强</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114071.md#1">大新竹生活圈？ 议员质询轻轨及AI智慧园区</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112530.md#1">亚太美国学校“艺空间”开幕  展出学生艺想世界</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111312.md#1">疫情趋缓 竹市府5月18日起停止户外洽公</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/25/n11279323.md#1">余筱菁议员质询 争取设置特教儿童日照中心</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/21/n11398095.md#1">反迫害20年 台政要：感谢法轮功守住普世价值</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/28/n11414950.md#1">法轮功反迫害20年 亚洲各界赞勇者风范</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/11/13/n11652977.md#1">余筱菁议员质询 关切大型OT案工程赔偿问题</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/11/14/n11655764.md#1">绿党提不分区 女医师邓惠文列第一</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/11/19/n11665984.md#1">绿党今登记参选竹县立委 喊出“抗中保台”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615941.md#1">徐耀昌走访铜锣窑青年创业基地 体验DIY</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611231.md#1">纪念二二八 林智坚：民主火炬接棒守护台湾</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10515170.md#1" target="_blank">林辉：蔡元培东床快婿的惨痛人生</a></li><li><a href="https://github.com/carc2844/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883126.md#1" target="_blank">“1400例”闹剧出笼记</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/10/n12097175.md#1">天才预言家珍妮  2020年大决战预言</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12092756.md#1">美国先知凯西  预言当今的中国与世界</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/13/7/18/n3919814.md#1">米开朗基罗（8）《创世纪》（下）</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/26/n11977962.md#1">奉创世主意旨  建立美国</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/4/6/n12007049.md#1">天人预言未来事  识破妖精本色</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112699.md#1">【直播】5·15川普在总统表彰仪式上讲话</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113049.md#1">【新闻看点】弗林案峰回路转 美政坛最大丑闻？</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113607.md#1">【拍案惊奇】金胖又失踪 反送中首例港人被判4年</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12108396.md#1">中研院薪水比卸任副元首礼遇金高？陈建仁回应</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109049.md#1">网曝习近平讲话：中共内部有“反习集团”</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109208.md#1">加速脱钩 川普：可切断整个中美关系</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106258.md#1">有意入籍台湾遭黄安攻击 黄秋生一句话爆呛</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110814.md#1">IU半个月三度捐款助人 生日前夕短发受关注</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106548.md#1">疫情下戴口罩产子 日女星用力过度致尾椎骨折</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111068.md#1">曝江蕙封麦后近况 陈子鸿笑喊：约吃饭都不来</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12105629.md#1">《花木兰》角色海选影片曝光 歌手窦靖童出镜</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107998.md#1">隐居山区70多年 俄罗斯最孤独女人不知疫情</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107708.md#1">加拿大小狗乐当奶爸 帮主人照顾几十只小猫</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106398.md#1">增肌一定要吃蛋白质 植物性蛋白更能燃脂</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106133.md#1">疫苗真是中共病毒解药？问世面临三大疑问</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110895.md#1">女子濒死见上帝和耶稣 恳求还阳终获重生</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/carc2844/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/carc2844/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/16/n12114457.htm">质询气氛火爆 余筱菁议员关切教育问题</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/16/n12114457.htm">质询气氛火爆 余筱菁议员关切教育问题</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114457.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/carc2844/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/5/16/n12114457.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
